get all articles + add sdomain service
