# academia-front/src/app/services/services/article-controller.service.ts
@@ -20,6 +20,10 @@ import { getAllArticles } from '../fn/article-controller/get-all-articles';
 import { GetAllArticles$Params } from '../fn/article-controller/get-all-articles';
 import { getArticleById } from '../fn/article-controller/get-article-by-id';
 import { GetArticleById$Params } from '../fn/article-controller/get-article-by-id';
+import { getMyArticles } from '../fn/article-controller/get-my-articles';
+import { GetMyArticles$Params } from '../fn/article-controller/get-my-articles';
+import { uploadArticleCover } from '../fn/article-controller/upload-article-cover';
+import { UploadArticleCover$Params } from '../fn/article-controller/upload-article-cover';
 
 @Injectable({ providedIn: 'root' })
 export class ArticleControllerService extends BaseService {
@@ -77,6 +81,35 @@ export class ArticleControllerService extends BaseService {
     );
   }
 
+  /** Path part for operation `uploadArticleCover()` */
+  static readonly UploadArticleCoverPath = '/articles/file/{article-id}';
+
+  /**
+   * This method provides access to the full `HttpResponse`, allowing access to response headers.
+   * To access only the response body, use `uploadArticleCover()` instead.
+   *
+   * This method sends `multipart/form-data` and handles request body of type `multipart/form-data`.
+   */
+  uploadArticleCover$Response(params: UploadArticleCover$Params, context?: HttpContext): Observable<StrictHttpResponse<{
+}>> {
+    return uploadArticleCover(this.http, this.rootUrl, params, context);
+  }
+
+  /**
+   * This method provides access only to the response body.
+   * To access the full response (for headers, for example), `uploadArticleCover$Response()` instead.
+   *
+   * This method sends `multipart/form-data` and handles request body of type `multipart/form-data`.
+   */
+  uploadArticleCover(params: UploadArticleCover$Params, context?: HttpContext): Observable<{
+}> {
+    return this.uploadArticleCover$Response(params, context).pipe(
+      map((r: StrictHttpResponse<{
+}>): {
+} => r.body)
+    );
+  }
+
   /** Path part for operation `getArticleById()` */
   static readonly GetArticleByIdPath = '/articles/{id}';
 
@@ -86,7 +119,7 @@ export class ArticleControllerService extends BaseService {
    *
    * This method doesn't expect any request body.
    */
-  getArticleById$Response(params: GetArticleById$Params, context?: HttpContext): Observable<StrictHttpResponse<Article>> {
+  getArticleById$Response(params?: GetArticleById$Params, context?: HttpContext): Observable<StrictHttpResponse<Article>> {
     return getArticleById(this.http, this.rootUrl, params, context);
   }
 
@@ -96,7 +129,7 @@ export class ArticleControllerService extends BaseService {
    *
    * This method doesn't expect any request body.
    */
-  getArticleById(params: GetArticleById$Params, context?: HttpContext): Observable<Article> {
+  getArticleById(params?: GetArticleById$Params, context?: HttpContext): Observable<Article> {
     return this.getArticleById$Response(params, context).pipe(
       map((r: StrictHttpResponse<Article>): Article => r.body)
     );
@@ -111,7 +144,7 @@ export class ArticleControllerService extends BaseService {
    *
    * This method doesn't expect any request body.
    */
-  deleteArticle$Response(params: DeleteArticle$Params, context?: HttpContext): Observable<StrictHttpResponse<void>> {
+  deleteArticle$Response(params?: DeleteArticle$Params, context?: HttpContext): Observable<StrictHttpResponse<void>> {
     return deleteArticle(this.http, this.rootUrl, params, context);
   }
 
@@ -121,9 +154,34 @@ export class ArticleControllerService extends BaseService {
    *
    * This method doesn't expect any request body.
    */
-  deleteArticle(params: DeleteArticle$Params, context?: HttpContext): Observable<void> {
+  deleteArticle(params?: DeleteArticle$Params, context?: HttpContext): Observable<void> {
     return this.deleteArticle$Response(params, context).pipe(
       map((r: StrictHttpResponse<void>): void => r.body)
+    );
+  }
+
+  /** Path part for operation `getMyArticles()` */
+  static readonly GetMyArticlesPath = '/articles/my';
+
+  /**
+   * This method provides access to the full `HttpResponse`, allowing access to response headers.
+   * To access only the response body, use `getMyArticles()` instead.
+   *
+   * This method doesn't expect any request body.
+   */
+  getMyArticles$Response(params?: GetMyArticles$Params, context?: HttpContext): Observable<StrictHttpResponse<Array<Article>>> {
+    return getMyArticles(this.http, this.rootUrl, params, context);
+  }
+
+  /**
+   * This method provides access only to the response body.
+   * To access the full response (for headers, for example), `getMyArticles$Response()` instead.
+   *
+   * This method doesn't expect any request body.
+   */
+  getMyArticles(params?: GetMyArticles$Params, context?: HttpContext): Observable<Array<Article>> {
+    return this.getMyArticles$Response(params, context).pipe(
+      map((r: StrictHttpResponse<Array<Article>>): Array<Article> => r.body)
     );
   }
 
