# academia.network/src/main/java/com/academia/academia/entities/Domain.java
@@ -1,4 +1,26 @@
 package com.academia.academia.entities;
 
-public class Domain {
+
+import com.fasterxml.jackson.annotation.JsonBackReference;
+import jakarta.persistence.*;
+import lombok.*;
+
+import java.util.List;
+
+@Entity
+@Getter
+@Setter
+@NoArgsConstructor
+@AllArgsConstructor
+public class Domain{
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    private String name;
+
+    @OneToMany(mappedBy = "domain")
+    @JsonBackReference
+    private List<Article> articles;
 }
